<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context="com.example.branislavnovak.chatapplication.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/extraLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/usernameReg"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/sUsernameMessage2"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/sFirstName"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/extraLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordReg"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/sPasswordMessage2"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"/>

            <EditText
                android:id="@+id/lastName"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/sLastName"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/extraLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/email"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/sEmail"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/sGender"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"/>

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/genders"
                android:background="@color/backgroundColor"
                >

            </Spinner>

        </LinearLayout>

        <CheckBox
            android:id="@+id/notificationsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/sNotifications"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/sBirthDate"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"

            />

        <DatePicker
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/textColor"
            >
        </DatePicker>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="20dp"
            android:text="@string/sRegister" />
    </LinearLayout>

</ScrollView>
