<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:weightSum="3"
    tools:context="com.example.branislavnovak.chatapplication.MainActivity">



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/sUsernameMessage1"
        android:inputType="text"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="90dp"
        android:ems="12"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/sPasswordMessage1"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="9dp"
        android:ems="12"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/extraLayout1"
        android:orientation="horizontal"
        android:layout_marginTop="190dp"
        android:weightSum="2"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="@string/sLogin"
            android:layout_marginLeft="50dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:text="@string/sRegister"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="50dp"
            />

    </LinearLayout>

</LinearLayout>
