<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context="com.example.branislavnovak.chatapplication.MessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="180dp"
            android:layout_height="41dp"
            android:id="@+id/contactNameInMessage"
            android:textColor="@color/textColor"
            android:gravity="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/message_refresh"
            android:width="10dp"
            android:text="@string/sRefresh"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logoutButton1"
            android:text="@string/sLogout"
            />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:id="@+id/listOfMessages"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        >
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <EditText
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/eMessage"
            android:hint="@string/sMessage"
            android:layout_marginLeft="20dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendButton"
            android:layout_alignParentRight="true"
            android:text="@string/sSend"
            android:layout_marginLeft="30dp"

            />

    </RelativeLayout>
</RelativeLayout>
